--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso IA: ChatGPT, Gemini y Copilot para Docentes</title>
+    <title>Seminario IA: ChatGPT, Gemini y Copilot para Docentes</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
@@ -177,7 +177,7 @@
         <!-- Hero Section -->
         <section class="text-center mb-20">
             <h1 class="text-4xl md:text-6xl font-bold mb-4">
-                <span class="bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-teal-300">Curso IA: El Tridente para Docentes</span>
+                <span class="bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-teal-300">Seminario IA: El Tridente para Docentes</span>
             </h1>
             <h2 class="text-2xl md:text-3xl font-light mb-6">Domina ChatGPT, Gemini y Copilot</h2>
              <p class="text-lg text-gray-400 max-w-4xl mx-auto"><span class="icon icon-target"></span>Transformar la percepción de la IA de una simple herramienta a un potente <strong class="font-semibold text-blue-300">equipo de asistentes pedagógicos personales</strong>. Este curso te capacita para dominar el *prompting* y decidir estratégicamente cuándo usar <strong class="text-chatgpt">ChatGPT</strong>, <strong class="text-gemini">Gemini</strong> o <strong class="text-copilot">Copilot</strong> para ahorrar tiempo, personalizar el aprendizaje y fomentar la creatividad en el aula.</p>
